--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
       WORDPRESS_DB_PASSWORD: ${WORDPRESS_DB_PASSWORD}
       WORDPRESS_DB_NAME: ${WORDPRESS_DB_NAME}
       WORDPRESS_CONFIG_EXTRA: |
-        define('WP_HOME', 'https://resivalex.com/');
-        define('WP_SITEURL', 'https://resivalex.com/');
+        define('WP_HOME', '${WORDPRESS_BASE_URL}');
+        define('WP_SITEURL', '${WORDPRESS_BASE_URL}');
         define('FS_METHOD', 'direct');
     depends_on:
       - mysql
